Start to separate optional style from core style.
Maintain the core/functional style in deckard.css and separate out
exemplar style into individual example stylesheets and corresponding
example markup pages.

--- a/stylesheet/deckard.css
+++ b/stylesheet/deckard.css
@@ -94,6 +94,7 @@ surround with another div to hug the parent and catch the child positioning */
 	background-color: darkgrey;
 	border-radius: 5px;
 	position: relative;
+	text-align: center;
 }
 .frame-inner.selected {
 	background-color: white;
